--- a/PurgarNET.AAConnector/PurgarNET.AAConnector.Console/RunbookActivityForm.xaml
+++ b/PurgarNET.AAConnector/PurgarNET.AAConnector.Console/RunbookActivityForm.xaml
@@ -108,22 +108,43 @@
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
-                    <StackPanel Style="{StaticResource InputPanelStyle}" Grid.ColumnSpan="2" x:Name="RunbookSelectorPanel" IsEnabled="{Binding Instance, Mode=OneWay, ElementName=SmaConnectionPicker, Converter={StaticResource ObjToBoolConverter}}" >
-                        <Label Content="Runbook name:" />
+                    <StackPanel Margin="0,0,0,10" Style="{StaticResource InputPanelStyle}" Grid.ColumnSpan="2" x:Name="RunbookSelectorPanel" IsEnabled="{Binding Instance, Mode=OneWay, ElementName=SmaConnectionPicker, Converter={StaticResource ObjToBoolConverter}}" >
                         <Grid>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="58*"/>
+                                <ColumnDefinition Width="3*"/>
                                 <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="1*" />
                                 <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
-                            <TextBox x:Name="RunbookNameTextBox" Text="{Binding RunbookName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" toolbox:Validation.ValueRequired="True" IsReadOnly="True" Style="{StaticResource InputBoxStyle}" />
-
-                            <Button Grid.Column="1" x:Name="RefreshRunbookButton" Content="Refresh" Margin="10,0,0,0" VerticalAlignment="Top" Width="44" Height="24" IsEnabled="{Binding ElementName=RunbookNameTextBox, Path=Text, Converter={StaticResource StringToBoolConverter}}" Click="RefreshRunbookButton_Click" />
-                            <Button Grid.Column="2" x:Name="SelectRunbookButton" Content="Select" Margin="10,0,0,0" VerticalAlignment="Top" Width="44" Height="24" Click="SelectRunbookButton_Click" />
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <Label Content="Runbook name:" />
+                            <TextBox Grid.Row="1" x:Name="RunbookNameTextBox" Text="{Binding RunbookName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" toolbox:Validation.ValueRequired="True" IsReadOnly="True" Style="{StaticResource InputBoxStyle}" />
+                            <Button Grid.Row="1" Grid.Column="1" x:Name="SelectRunbookButton" Content="..." Margin="0,0,0,0" VerticalAlignment="Top" MinWidth="20" MaxWidth="20" Width="20" Height="24" Click="SelectRunbookButton_Click" />
+                            <Button Grid.Row="1" Grid.Column="2" x:Name="RefreshRunbookButton" Content="Refresh" Margin="10,0,10,0" VerticalAlignment="Top" Width="44" Height="24" IsEnabled="{Binding ElementName=RunbookNameTextBox, Path=Text, Converter={StaticResource StringToBoolConverter}}" Click="RefreshRunbookButton_Click" />
+                            
+                            <Label Grid.Column="3" Content="Run on:" />
+                            <TextBox Grid.Column="3" Grid.Row="1" Name="RunOnTextBox" Text="{Binding Path=RunOn, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" toolbox:Validation.ValueRequired="True" IsReadOnly="True" Style="{StaticResource InputBoxStyle}" />
+                            <Button Grid.Row="1" Grid.Column="4" x:Name="SelectRunOnButton" Content="..." VerticalAlignment="Top" MinWidth="20" MaxWidth="20" Width="20" Height="24" Click="SelectRunOnButton_Click" />
+                        </Grid>
+                        <Grid IsEnabled="{Binding ElementName=RunbookNameTextBox, Path=Text, Converter={StaticResource StringToBoolConverter}}">
+                            <Grid.RowDefinitions>
+                                <RowDefinition />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            
                         </Grid>
                     </StackPanel>
 
-                    <Grid x:Name="ParametersPanel" Grid.Row="1"  >
+                    <StackPanel x:Name="ParametersPanel" Grid.Row="1"  >
+                        <Label Content="Parameters:" />
                         <ListView  ItemsSource="{Binding }" x:Name="RunbooksListView" SelectionMode="Single"    >
                             <ListView.ItemContainerStyle>
                                 <Style TargetType="ListViewItem">
@@ -184,7 +205,7 @@
                             </ListView.ItemTemplate>
                             
                         </ListView>-->
-                    </Grid>
+                    </StackPanel>
 
                 </Grid>
             </TabItem>
