--- a/PurgarNET.AAConnector/PurgarNET.AAConnector.Console/SettingsPage.xaml
+++ b/PurgarNET.AAConnector/PurgarNET.AAConnector.Console/SettingsPage.xaml
@@ -1,21 +1,16 @@
-﻿<Window
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:Custom="http://schemas.microsoft.com/SystemCenter/Common/UI/Views" 
-    xmlns:local="clr-namespace:PurgarNET.AAConnector.Console" 
-    x:Class="PurgarNET.AAConnector.Console.SettingsWindow" 
-    mc:Ignorable="d" 
-    d:DesignHeight="450" d:DesignWidth="450" WindowStartupLocation="CenterOwner" Title="Login to Azure" 
-    Width="500" Height="450"
-    Topmost="True"
-    Loaded="Window_Loaded" ShowInTaskbar="False" WindowStyle="ToolWindow"
-    
-    >
-    <Window.Resources>
+﻿<wpfwiz:WizardRegularPageBase x:Class="PurgarNET.AAConnector.Console.SettingsPage"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:PurgarNET.AAConnector.Console"
+             mc:Ignorable="d" 
+             d:DesignHeight="300" d:DesignWidth="300"
+             xmlns:wpfwiz="clr-namespace:Microsoft.EnterpriseManagement.UI.WpfWizardFramework;assembly=Microsoft.EnterpriseManagement.UI.WpfWizardFramework" 
+             Loaded="WizardRegularPageBase_Loaded">
+    <wpfwiz:WizardRegularPageBase.Resources>
         <ResourceDictionary Source="/PurgarNET.AAConnector.Console;component/Styles.xaml" />
-    </Window.Resources>
+    </wpfwiz:WizardRegularPageBase.Resources>
     <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
         <StackPanel Margin="20" >
             <TextBlock FontSize="22" Text="Azure Automation Connector Settings" Margin="0,6,0,20" />
@@ -34,7 +29,7 @@
                         <ColumnDefinition Width="Auto"  />
                         <ColumnDefinition Width="*"  />
                     </Grid.ColumnDefinitions>
-                    
+
                     <TextBlock Grid.ColumnSpan="2" Margin="0,6,0,6" Text="Currently connected to:" />
 
                     <TextBlock FontWeight="DemiBold" Grid.Row="1" Text="Tenant ID" />
@@ -55,7 +50,7 @@
             </Expander>
 
             <Expander Margin="0,20,0,0" IsExpanded="True" Header="Settings" Visibility="{Binding Path=Settings.IsConfigured, Converter={StaticResource BoolToVisibilityConverter}}">
-                
+
             </Expander>
 
             <Border>
@@ -64,5 +59,4 @@
 
         </StackPanel>
     </ScrollViewer>
-</Window>
-
+</wpfwiz:WizardRegularPageBase>
